give more padding to prevent shadow cut off
SRFCMSAL-2337

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -475,14 +475,14 @@ $background-overlap-wide: 50px;
 
     @include tablet-up {
       min-width: calc((100% - 32px - 44px) / 3.00001 ); // 32px: left gap between Collection and Teaser; 44px: visible part of the first 'overflowed' item
-      padding-bottom: 16px;
+      padding-bottom: 22px;
       padding-right: 12px;
     }
 
     @include desktop-wide {
       min-width: calc((100% - 40px - 56px) / 3.00001 );
       padding-right: 16px;
-      padding-bottom: 20px;
+      padding-bottom: 22px;
     }
 
     &:first-child {
